apply css, fix stackoverflow when retrieve student by adding IgnoreJson

--- a/Client/src/main/resources/static/css/waa.css
+++ b/Client/src/main/resources/static/css/waa.css
@@ -16,3 +16,6 @@ input[type=checkbox]
     font-weight: bold;
     color: brown;
 }
+.pagination {
+    float: right;
+}
